Insanity is doing the same thing over and over again, expecting different results.

--- a/TDT4259 - Anvendt data science/Individual Assignment/library.bib
+++ b/TDT4259 - Anvendt data science/Individual Assignment/library.bib
@@ -18,39 +18,26 @@
 }
 
 @misc{SafetyPledge,
-  title = {Safety {{Pledge}} -},
+  title = {Safety {{Pledge}}},
   journal = {Voi},
+  howpublished = {https://www.voiscooters.com/ride-safe/safety-pledge/},
   langid = {english},
   file = {/Users/magnusholtet/Zotero/storage/UU6MARWP/safety-pledge.html}
 }
 
 @misc{Sustainability,
-  title = {Sustainability -},
+  title = {Sustainability},
   journal = {Voi},
+  howpublished = {https://www.voiscooters.com/sustainability/},
   langid = {english},
   file = {/Users/magnusholtet/Zotero/storage/ZASJJSLW/sustainability.html}
-}
-
-@misc{VartSikkerhetslofteSikkerhet,
-  title = {{V\aa rt sikkerhetsl\o fte - Sikkerhet er en del av v\aa rt DNA.}},
-  journal = {Voi},
-  abstract = {Vi \o nsker \aa{} v\ae re forkjempere for en nullvisjon for ulykker relatert til mikromobilitet, fordi \'en ulykke er en ulykke for mange. Derfor har vi avgitt ti l\o fter om hvordan vi vil fortsette arbeidet med \aa{} forbedre trafikksikkerheten til v\aa re brukere, fotgjengere og andre trafikanter.},
-  langid = {norsk},
-  file = {/Users/magnusholtet/Zotero/storage/T4ZU4TDM/vart-sikkerhetslofte.html}
-}
-
-@misc{VoiTechnologyFormer,
-  title = {{Voi Technology - Former byer for mennesker}},
-  journal = {Voi},
-  abstract = {Voi er et svensk urbant mobilitetsselskap som tilbyr elektrisk sparkesykkel og sykkel-deling i samarbeid med byer og lokalsamfunn},
-  langid = {norsk},
-  file = {/Users/magnusholtet/Zotero/storage/ZUEY7U7A/voi-technology.html}
 }
 
 @misc{VoiTechnologyShaping,
   title = {Voi {{Technology}} - {{Shaping}} Cities for People},
   journal = {Voi},
   abstract = {Voi is a Swedish urban mobility company offering electric scooter and bike-sharing in partnership with cities and local communities.},
+  howpublished = {https://www.voiscooters.com/voi-technology/},
   langid = {english},
   file = {/Users/magnusholtet/Zotero/storage/GZCVQGJK/voi-technology.html}
 }
