--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.adoc
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.adoc
@@ -6,6 +6,7 @@
 :sectnums:
 :toc: macro
 :stylesheet: style/empty.css
+:toclevels: 4
 :docinfo: shared,private-footer
 
 = TDT4151 - Enterprise Architecture for Enterprise Innovation
