--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.adoc
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.adoc
@@ -22,6 +22,9 @@ include::sections/Chapter 1/1_case_description.adoc[]
 include::sections/Chapter 1/2_purpose_and_goals.adoc[]
 include::sections/Chapter 1/3_the_model_design.adoc[]
 include::sections/Chapter 1/4_the_model.adoc[]
+
+!THE FOLLOWING SECTIONS ARE EMPTY, JUST PROVIDED TO SHOW OUTLINE OF REPORT!
+
 include::sections/Chapter 1/5_perspectives.adoc[]
 include::sections/Chapter 1/6_modeling_tools.adoc[]
 include::sections/Chapter 1/7_using_your_model.adoc[]
