It's been monday for an entire year.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.adoc
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.adoc
@@ -23,7 +23,7 @@ include::sections/Chapter 1/2_purpose_and_goals.adoc[]
 include::sections/Chapter 1/3_the_model_design.adoc[]
 include::sections/Chapter 1/4_the_model.adoc[]
 
-!THE FOLLOWING SECTIONS ARE EMPTY, JUST PROVIDED TO SHOW OUTLINE OF REPORT!
+! THE NEXT SECTIONS ARE EMPTY, EXCEPT THE BLUEPRINT AND CUSTOMER JOURNEY, JUST PROVIDED TO SHOW OUTLINE OF REPORT !
 
 include::sections/Chapter 1/5_perspectives.adoc[]
 include::sections/Chapter 1/6_modeling_tools.adoc[]
