I'm sorry you're so easily offended.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -9,6 +9,11 @@
   isbn = {978-3-662-53933-0}
 }
 
+@misc{LinjeforeningenOnline,
+  title = {Linjeforeningen {{Online}}},
+  howpublished = {https://online.ntnu.no/}
+}
+
 @book{Sandkuhl_Stirna_Persson_Wißotzki_2014,
   title = {Enterprise Modeling: Tackling Business Challenges with the {{4EM}} Method},
   author = {Sandkuhl, Kurt and Stirna, Janis and Persson, Anne and Wi{\ss}otzki, Matthias},
