It's been monday for an entire year.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -1,4 +1,13 @@
 
+@book{Chesbrough_2010,
+  title = {Open Services Innovation: Rethinking Your Business to Grow and Compete in a {{New Era}}},
+  author = {Chesbrough, Henry},
+  year = {2010},
+  publisher = {{Jossey Bass Wiley}},
+  address = {{Chichester, England}},
+  isbn = {978-0-470-90574-6}
+}
+
 @book{Lankhorst_2017,
   title = {Enterprise Architecture at Work: Modelling, Communication and Analysis},
   author = {Lankhorst, Marc},
@@ -22,6 +31,19 @@
   publisher = {{Springer}},
   address = {{Berlin, Germany}},
   isbn = {978-3-662-43725-4}
+}
+
+@misc{twitterWhatFrameworkInnovation2015,
+  title = {What Is the Framework for Innovation? Design {{Council}}'s Evolved {{Double Diamond}}},
+  shorttitle = {What Is the Framework for Innovation?},
+  author = {Twitter and LinkedIn and Facebook},
+  year = {2015},
+  month = mar,
+  journal = {Design Council},
+  abstract = {Design Council's framework for innovation helps designers and non-designers across the globe tackle some of the most complex social, economic and environmental problems. It is a fundamental part of our work: enabling us to support the public, private and third sector organisations we work with transform the way they develop and deliver their services.},
+  howpublished = {https://www.designcouncil.org.uk/news-opinion/what-framework-innovation-design-councils-evolved-double-diamond},
+  langid = {english},
+  file = {/Users/holtet/Zotero/storage/625XJH37/what-framework-innovation-design-councils-evolved-double-diamond.html}
 }
 
 
