Work hard. Complain harder.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -8,6 +8,12 @@
   isbn = {978-0-470-90574-6}
 }
 
+@misc{dotkom,
+  title = {Drift- Og Utviklingskomiteen},
+  howpublished = {https://old.online.ntnu.no/wiki/online/historie/dotkom/},
+  file = {/Users/holtet/Zotero/storage/GYSECDUW/dotkom.html}
+}
+
 @misc{doubleDiamond,
   title = {What Is the Framework for Innovation? Design {{Council}}'s Evolved {{Double Diamond}}},
   shorttitle = {What Is the Framework for Innovation?},
@@ -19,6 +25,18 @@
   howpublished = {https://www.designcouncil.org.uk/news-opinion/what-framework-innovation-design-councils-evolved-double-diamond},
   langid = {english},
   file = {/Users/holtet/Zotero/storage/625XJH37/what-framework-innovation-design-councils-evolved-double-diamond.html}
+}
+
+@article{DoubleDiamondDesign2021,
+  title = {Double {{Diamond}} (Design Process Model)},
+  year = {2021},
+  month = nov,
+  journal = {Wikipedia},
+  abstract = {Double Diamond is the name of a design process model popularized by the British Design Council in 2005, and adapted from the divergence-convergence model proposed in 1996 by Hungarian-American linguist B\'ela H. B\'an\'athy. The two diamonds represent a process of exploring an issue more widely or deeply (divergent thinking) and then taking focused action (convergent thinking). It suggests that the design process should have four phases: Discover: Understand the issue rather than merely assuming it. It involves speaking to and spending time with people who are affected by the issues. Define: The insight gathered from the discovery phase can help to define the challenge in a different way. Develop: Give different answers to the clearly defined problem, seeking inspiration from elsewhere and co-designing with a range of different people.   Deliver: Involves testing out different solutions at small-scale, rejecting those that will not work and improving the ones that will.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1056040220},
+  file = {/Users/holtet/Zotero/storage/YUXRXRVJ/index.html}
 }
 
 @book{Lankhorst_2017,
@@ -36,6 +54,14 @@
   howpublished = {https://online.ntnu.no/}
 }
 
+@misc{Nibble4,
+  title = {Nibble4},
+  year = {2021},
+  month = nov,
+  abstract = {Kiosk system for Online},
+  howpublished = {Appkom}
+}
+
 @book{Sandkuhl_Stirna_Persson_Wißotzki_2014,
   title = {Enterprise Modeling: Tackling Business Challenges with the {{4EM}} Method},
   author = {Sandkuhl, Kurt and Stirna, Janis and Persson, Anne and Wi{\ss}otzki, Matthias},
@@ -44,6 +70,12 @@
   publisher = {{Springer}},
   address = {{Berlin, Germany}},
   isbn = {978-3-662-43725-4}
+}
+
+@misc{trikom,
+  title = {Trivselskomiteen},
+  howpublished = {https://old.online.ntnu.no/wiki/online/historie/trikom/},
+  file = {/Users/holtet/Zotero/storage/X8Y2HKZ5/trikom.html}
 }
 
 
