--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -10,6 +10,9 @@
 
 @misc{dotkom,
   title = {Drift- Og Utviklingskomiteen},
+  year = {2021},
+  month = nov,
+  journal = {Linjeforeningen Online},
   howpublished = {https://old.online.ntnu.no/wiki/online/historie/dotkom/},
   file = {/Users/holtet/Zotero/storage/GYSECDUW/dotkom.html}
 }
@@ -51,6 +54,9 @@
 
 @misc{LinjeforeningenOnline,
   title = {Linjeforeningen {{Online}}},
+  year = {2021},
+  month = nov,
+  journal = {Linjeforeningen Online},
   howpublished = {https://online.ntnu.no/}
 }
 
@@ -74,6 +80,9 @@
 
 @misc{trikom,
   title = {Trivselskomiteen},
+  year = {2021},
+  month = nov,
+  journal = {Linjeforeningen Online},
   howpublished = {https://old.online.ntnu.no/wiki/online/historie/trikom/},
   file = {/Users/holtet/Zotero/storage/X8Y2HKZ5/trikom.html}
 }
