You are the reason your mother gets bullied at the local supermarket.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -78,6 +78,17 @@
   isbn = {978-3-662-43725-4}
 }
 
+@misc{skowronLeanCanvasVs,
+  title = {Lean {{Canvas}} vs {{Business Model Canvas}}: Which {{Should You Choose}}?},
+  shorttitle = {Lean {{Canvas}} vs {{Business Model Canvas}}},
+  author = {Skowron, Marta},
+  journal = {UIG Studio},
+  abstract = {To choose between lean canvas vs. business model canvas, you need to know the difference between them. Check UIG Studio blog.},
+  howpublished = {https://uigstudio.com/insights/lean-canvas-vs-business-model-canvas-which-should-you-choose},
+  langid = {english},
+  file = {/Users/holtet/Zotero/storage/3YEPLDRI/lean-canvas-vs-business-model-canvas-which-should-you-choose.html}
+}
+
 @misc{trikom,
   title = {Trivselskomiteen},
   year = {2021},
