The best things in life are actually really expensive.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -52,6 +52,14 @@
   isbn = {978-3-662-53933-0}
 }
 
+@misc{lecture5,
+  type = {Lecture},
+  title = {Lecture 5 - {{Enterprise Architecture}}},
+  author = {{Abbas petersen}, Sobah},
+  year = 2021,
+  address = {{NTNU}}
+}
+
 @misc{LinjeforeningenOnline,
   title = {Linjeforeningen {{Online}}},
   year = {2021},
@@ -87,6 +95,12 @@
   howpublished = {https://uigstudio.com/insights/lean-canvas-vs-business-model-canvas-which-should-you-choose},
   langid = {english},
   file = {/Users/holtet/Zotero/storage/3YEPLDRI/lean-canvas-vs-business-model-canvas-which-should-you-choose.html}
+}
+
+@misc{TOGAF,
+  title = {The {{Open Group Architecture Framework Version}} 8.1.1},
+  howpublished = {https://pubs.opengroup.org/architecture/togaf8-doc/arch/},
+  file = {/Users/holtet/Zotero/storage/WC896EBZ/arch.html}
 }
 
 @misc{trikom,
