The difference between coffee and your opinion is I asked for coffee.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -42,6 +42,20 @@
   file = {/Users/holtet/Zotero/storage/YUXRXRVJ/index.html}
 }
 
+@inproceedings{krogstie,
+  title = {Quality of {{Business Process Models}}},
+  booktitle = {Lecture {{Notes}} in {{Business Information Processing}}},
+  author = {Krogstie, John},
+  year = {2012},
+  month = nov,
+  volume = {134},
+  pages = {76--90},
+  doi = {10.1007/978-3-642-34549-4_6},
+  abstract = {Processes modeling is done for a number of reasons in relation to enterprise modeling, business process modeling and information systems development, and is a widely used technique. In particular after the introduction of BPR and workflow in the nineties, much work has looked on quality of business process models. In this paper we present a specialization of a general framework for assessing quality of models to support the evaluation the quality of business process models. The specialization takes earlier work on quality of models, process quality and quality of business process models into account. Comparing the approaches we find on the one hand that the properties of business process model quality is subsumed by the generic framework on a high level, and that there are aspects in this framework that are not covered by the existing work on business process model quality. On the other hand, the comparison has resulted in an extension of the generic framework for these kinds of models, and in this way improved the practical applicability of the framework when applied to discussing the quality of business process models. \textcopyright{} IFIP International Federation for Information Processing 2012.},
+  isbn = {978-3-642-34548-7},
+  file = {/Users/holtet/Zotero/storage/9WUQ6DBT/Krogstie - 2012 - Quality of Business Process Models.pdf}
+}
+
 @book{Lankhorst_2017,
   title = {Enterprise Architecture at Work: Modelling, Communication and Analysis},
   author = {Lankhorst, Marc},
