It could probably get worse.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -8,6 +8,12 @@
   isbn = {978-0-470-90574-6}
 }
 
+@misc{CourseEnterpriseArchitecture,
+  title = {Course - {{Enterprise Architecture}} for {{Enterprise Innovation}} - {{TDT4252}} - {{NTNU}}},
+  howpublished = {https://www.ntnu.edu/studies/courses/TDT4252\#tab=omEmnet},
+  file = {/Users/holtet/Zotero/storage/W5563HF2/TDT4252.html}
+}
+
 @misc{dotkom,
   title = {Drift- Og Utviklingskomiteen},
   year = {2021},
