--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/library.bib
@@ -90,10 +90,11 @@
 
 @misc{Nibble4,
   title = {Nibble4},
+  author = {AppKom},
   year = {2021},
   month = nov,
   abstract = {Kiosk system for Online},
-  howpublished = {Appkom}
+  howpublished = {https://github.com/appKom/nibble4}
 }
 
 @book{Sandkuhl_Stirna_Persson_Wißotzki_2014,
